# tasks-be

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/: db.py  main.py
app/api/auth/: routes.py
app/api/tasks/: routes.py
app/api/users/: routes.py
app/config/: security.py
app/db/: database.py
app/dependency/: auth.py
app/models/: tasks.py  user.py
app/services/: auth_service.py  tasks_service.py  users_service.py
